# todo-list

./: LICENSE  README.md
backend/: .gitignore  README.md  pyproject.toml  run.py  tmp.py
backend/app/: __init__.py  crud.py  deps.py  models.py  schemas.py
backend/app/api/routes/: __init__.py  todos.py
backend/app/core/: config.py  database.py  exception.py  handlers.py  lifecycle.py  middlewares.py
frontend/: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.js
frontend/src/api/: todo.js
frontend/src/components/: AppSections.vue  AppSectionsForm.vue  AppSectionsList.vue  AppTitle.vue  TodoCard.vue
frontend/src/router/: index.js
frontend/src/store/: todo.js
frontend/src/views/: TodoDetail.vue  TodoForm.vue  TodoList.vue
